--- a/public/logs.html
+++ b/public/logs.html
@@ -9,14 +9,16 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.33/moment-timezone-with-data.min.js"></script>
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Visor de Logs</h1>
+        <h1 class="mb-4">Visor de Logs (Hora de Nueva York)</h1>
         <table id="logsTable" class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th>Fecha y Hora</th>
+                    <th>Fecha y Hora (NY)</th>
                     <th>Canal</th>
                     <th>Evento</th>
                     <th>Mensaje</th>
@@ -35,7 +37,13 @@
                     dataSrc: ''
                 },
                 columns: [
-                    { data: 'created_at' },
+                    { 
+                        data: 'created_at',
+                        render: function(data) {
+                            // Convertir la hora UTC a la hora de Nueva York
+                            return moment(data).tz("America/New_York").format("YYYY-MM-DD HH:mm:ss z");
+                        }
+                    },
                     { data: 'canal' },
                     { data: 'evento' },
                     { 
